--- a/menu.html
+++ b/menu.html
@@ -82,9 +82,12 @@
     <button onclick="location.href='descargas.html'" class="boton-grande">
       Download
     </button>
-    <!-- 🔹 Nuevo botón Upload -->
     <button onclick="location.href='upload.html'" class="boton-grande">
       Upload
+    </button>
+    <!-- 🔹 Nuevo botón Solicitudes -->
+    <button onclick="location.href='solicitudes.html'" class="boton-grande">
+      Solicitudes
     </button>
   </div>
 
