--- a/proveedores.html
+++ b/proveedores.html
@@ -251,7 +251,14 @@
     import { initializeApp } 
       from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
 
-    const firebaseConfig = { /* tu config */ };
+const firebaseConfig = {
+  apiKey: "AIzaSyBDrfX2Fszw9-M1DwzX_Sk63et9tw4ddOU",
+  authDomain: "glowzzainventario.firebaseapp.com",
+  projectId: "tu-proyectoglowzzainventario",
+  storageBucket: "glowzzainventario.firebasestorage.app",
+  messagingSenderId: "159721581844",
+  appId: "1:159721581844:web:f62cdb303258dc847b6601"
+};
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
