--- a/balance.html
+++ b/balance.html
@@ -60,7 +60,7 @@ const firebaseConfig = {
   apiKey: "AIzaSyBDrfX2Fszw9-M1DwzX_Sk63et9tw4ddOU",
   authDomain: "glowzzainventario.firebaseapp.com",
   projectId: "glowzzainventario",
-  storageBucket: "glowzzainventario.firebasestorage.app",
+  storageBucket: "glowzzainventario.appspot.com",   // 🔹 corregido
   messagingSenderId: "159721581844",
   appId: "1:159721581844:web:f62cdb303258dc847b6601",
   measurementId: "G-0FR3Q6P3L2"
