--- a/upload.html
+++ b/upload.html
@@ -107,10 +107,11 @@
 const firebaseConfig = {
   apiKey: "AIzaSyBDrfX2Fszw9-M1DwzX_Sk63et9tw4ddOU",
   authDomain: "glowzzainventario.firebaseapp.com",
-  projectId: "tu-proyectoglowzzainventario",
-  storageBucket: "glowzzainventario.firebasestorage.app",
+  projectId: "glowzzainventario",
+  storageBucket: "glowzzainventario.appspot.com",   // 🔹 corregido
   messagingSenderId: "159721581844",
-  appId: "1:159721581844:web:f62cdb303258dc847b6601"
+  appId: "1:159721581844:web:f62cdb303258dc847b6601",
+  measurementId: "G-0FR3Q6P3L2"
 };
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
