--- a/solicitudes.html
+++ b/solicitudes.html
@@ -134,7 +134,7 @@
   <input type="text" id="telefono" required>
 
   <label for="pedido">Pedido:</label>
-  <textarea id="pedido" placeholder="Ej: Averiguar precio estatua de Ganesha..." required></textarea>
+  <textarea id="pedido" placeholder="Que necesita?" required></textarea>
 
   <button type="submit" class="boton">Registrar Solicitud</button>
 </form>
