--- a/menu.html
+++ b/menu.html
@@ -18,6 +18,13 @@
       font-size: 36px;
       text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
     }
+    .boton-grande.rojo {
+  background-color: #e53935;
+}
+.boton-grande.rojo:hover {
+  background-color: #c62828;
+  transform: scale(1.05);
+}
 
     .menu-principal {
       display: grid;
@@ -89,6 +96,11 @@
     <button onclick="location.href='solicitudes.html'" class="boton-grande">
       Solicitudes
     </button>
+    <button onclick="location.href='administrador.html'" 
+        class="boton-grande" 
+        style="background-color:#e53935;">
+  Administrador Glowzza
+</button>
   </div>
 
   <button onclick="location.href='https://www.glowzza.com.ar'" class="boton-volver">
